# codex

./: README.md
.codex-multi/: config.toml  context_cache.json
codex-rs/: Cargo.toml
codex-rs/app-server/: BUILD.bazel  README.md
codex-rs/core/: Cargo.toml
codex-rs/routing/: Cargo.toml  build-env.sh
codex-rs/supervisor/: Cargo.toml
codex-rs/supervisor/src/: lib.rs  supervisor_loop.rs  task_graph.rs
docs/product/: assumptions.md  cli-interaction-spec.md  goals-and-nongoals.md  index.md  initial-prompt.md  key-design-questions.md  prd.md  problem-statement.md  product-concept.md
docs/spec/: agent-taxonomy.md  architectural-principles.md  compaction-reference.md  design-principles.md  event-model.md  future-expansion.md  gaps-execution-plan.md  gaps.md  implementation-order.md  implementation-status.md  index.md  initial-data-models.md  initial-interfaces.md  integration-model.md  observability.md  (+28 more)
orchestrator/: README.md  pyproject.toml
orchestrator/.codex-multi/: context_cache.json  usage_log.jsonl
orchestrator/src/codex_orchestrator/: __init__.py  __main__.py  supervisor.py
orchestrator/src/codex_orchestrator/compaction/: chunking.py  extractor.py  normalize.py  prompts.py  refiner.py  service.py  storage.py
orchestrator/src/codex_orchestrator/providers/: base.py  codex_cli_adapter.py  responses_compat.py
orchestrator/src/codex_orchestrator/schemas/: approval.py  artifacts.py  config.py  events.py  id.py  routing.py  run.py  worker.py
orchestrator/tests/unit/: test_compaction.py  test_routing.py  test_schemas.py
tests/: smoke_multi_agent.sh
(+110 files in other folders)
