[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for the Codex CLI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

# No [project.scripts] — the orchestrator has no user-facing CLI.
# It is invoked exclusively by the Rust CLI via: python -m codex_orchestrator

[tool.hatch.build.targets.wheel]
packages = ["src/codex_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
