[package]
name = "codex-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic supervisor loop for multi-agent orchestration"

[lib]
name = "codex_supervisor"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-routing = { path = "../routing" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
